remove duplicate waypoints add